gatekeeper/constraints/deny-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: deny-run-as-root
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    gatekeeper.sh/library-source: open-policy-agent/gatekeeper-library/library/pod-security-policy/users
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - argocd
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
